# HorariosAutomatricula

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  iv.yaml  main.py  pyproject.toml  pyproyect.toml
.github/workflows/: imagen_test.yml
docs/: asignaturas.txt  biblioteca_aserciones.md  check_sintaxis.md  gestor_dependencias.md  gestor_tareas.md  historias_usuario.md  imagen_docker.md  milestones.md  test_runners.md
horarios_automatricula/: asignatura.py  comparador.py  conflictos.py  grupo.py  horario.py  matricula.py  mencion.py  parser.py
src/: asignatura.py  horario.py  main.py  mencion.py
tests/: test_horario.py  test_leer_asignaturas.py
